Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,6 +223,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    capitalized_countries = []\n",
     "    travel_destinations.upper()\n",
     "    return travel_destinations"
    ]
