--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
-    "    travel_destinations.upper()\n",
+    "    for countries in tra\n",
     "    return travel_destinations"
    ]
   },
