Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
-    "    for countries in tra\n",
+    "    for countries in travel_destinations:\n",
+    "        \n",
     "    return travel_destinations"
    ]
   },
