--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
     "    for countries in travel_destinations:\n",
-    "        \n",
+    "        capitalized_countries.append\n",
     "    return travel_destinations"
    ]
   },
