--- a/index.ipynb
+++ b/index.ipynb
@@ -224,8 +224,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
-    "    for countries in travel_destinations:\n",
-    "        capitalized_countries.append\n",
+    "    for country in travel_destinations:\n",
+    "        capitalized_countries.append(countr)\n",
     "    return travel_destinations"
    ]
   },
