Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,8 +225,8 @@
     "def capitalize_countries():\n",
     "    capitalized_countries = []\n",
     "    for country in travel_destinations:\n",
-    "        capitalized_countries.append(countr)\n",
-    "    return travel_destinations"
+    "        capitalized_countries.append(country.title())\n",
+    "    return capitalized"
    ]
   },
   {
